[tool.poetry]
name = "slacktivate"
version = "0.2.8"
description = "Slacktivate is a Python library and Command-Line Interface to assist in the provisioning of a Slack workspace."
authors = ["Jérémie Lumbroso <lumbroso@cs.princeton.edu>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/jlumbroso/slacktivate"
repository = "https://github.com/jlumbroso/slacktivate"
include = [
    "README.md",
]
keywords = [
    "Slack",
    "user provisioning",
    "Slack API",
    "Slack SCIM API",
    "Slack configuration",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business",
]

[tool.poetry.dependencies]
python = "^3.8"
slack-scim = "^1.1.0"
slackclient = "^2.8.0"
python-dotenv = "^0.14.0"
backoff = "^1.10.0"
Pillow = "^7.2.0"
requests = "^2.24.0"
pyyaml = "^5.3.1"
jinja2 = "^2.11.2"
yaql = "^1.1.3"
comma = "^0.5.3"
click = "^7.1.2"
click_help_colors = "^0.8"
click_spinner = "^0.1.10"
click-option-group = "^0.5.1"
#loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
slacktivate = "slacktivate.cli.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
