[tool.poetry]
name = "slacktivate"
version = "0.2.9"
description = "Slacktivate is a Python library and Command-Line Interface to assist in the provisioning of a Slack workspace."
authors = ["Jérémie Lumbroso <lumbroso@cs.princeton.edu>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/jlumbroso/slacktivate"
repository = "https://github.com/jlumbroso/slacktivate"
include = [
    "README.md",
]
keywords = [
    "Slack",
    "user provisioning",
    "Slack API",
    "Slack SCIM API",
    "Slack configuration",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business",
]

[tool.poetry.dependencies]
python = "^3.8"
slack-scim = "^1.1.0"           # MIT License (as of 2020-09-29)
slackclient = "^2.8.0"          # MIT License (as of 2020-09-29)
python-dotenv = "^0.14.0"       # BSD License (as of 2020-09-29)
backoff = "^1.10.0"             # MIT License (as of 2020-09-29)
Pillow = "^7.2.0"               # PIL Software License (as of 2020-09-29)
requests = "^2.24.0"            # Apache Software License (Apache 2.0) (as of 2020-09-29)
pyyaml = "^5.3.1"               # MIT License (as of 2020-09-29)
jinja2 = "^2.11.2"              # BSD License (as of 2020-09-29)
yaql = "^1.1.3"                 # Apache Software License (as of 2020-09-29)
comma = "^0.5.3"                # LGPLv3 (as of 2020-09-29)
click = "^7.1.2"                # BSD License (as of 2020-09-29)
click_help_colors = "^0.8"      # MIT License (as of 2020-09-29)
click_spinner = "^0.1.10"       # MIT License (as of 2020-09-29)
click-option-group = "^0.5.1"   # BSD License (as of 2020-09-29)
#loguru = "^0.5.3"              # MIT License (as of 2020-09-29)
tqdm = "^4.49.0"                # MPL 2.0 License (as of 2020-09-29)

[tool.poetry.dev-dependencies]
pytest = "^5.2"                 # MIT License (as of 2020-09-29)

[tool.poetry.scripts]
slacktivate = "slacktivate.cli.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
